--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# ROOT
 SERVER_PORT=5000
 NODE_ENV=development
 TIMEZONE='Asia/Dubai'
@@ -10,3 +11,6 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=cgimdb
 DB_PORT=5432
+
+# AUTH
+JWT_SECRET=secret
