--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,3 +15,7 @@ services:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
     restart: unless-stopped
+
+networks:
+  cgim:
+    driver: bridge
