--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "dev": "npm run build:live",
     "build": "tsc -p tsconfig.json",
+    "build:live": "cross-env NODE_ENV=development nodemon --watch 'src/**/*' --ext ts,js,yaml,yml --exec ts-node src/index.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli -d ormconfig.ts",
     "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli migration:create ./database/migrations/newMigration",
     "migration:generate": "npm run typeorm -- migration:generate ./database/migrations/newMigration",
